Cambios en rama Aporte

--- a/index.html
+++ b/index.html
@@ -100,12 +100,22 @@
                 <i class="fas fa-code fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Desarrollador</h3>
                 <p class="my-3">
-               Estudiaente de Frontend y JavaScript
+                Estudiaente de Frontend y JavaScript
                 </p>
             </div>
         </div>
     </section>
 
+    <section>
+        <div class="row justify-content-center">  
+            <div class="col-12 col-md-6">
+                <img src="assets/img/desafiolatam_principal-031aadc574e79866fac011f0e4dae20b0d891d220e593b203b39568a495b894c.jpeg" class="img-fluid" alt="Alex">
+                <h1 class="text-center">Actualmente estoy estudiando Desarrollo Web en Desafío Latam</h1>
+            </div>
+        </div>
+    </section>
+
+    <hr size="6px">
 
     <section id="Mis-trabajos" class="my-5 p-5">
 
@@ -132,7 +142,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Credichile</h5>
                         <p class="card-text">
-                         Analista comercial de productividades.
+                        Analista comercial de productividades.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -158,7 +168,7 @@
 
     </section>
 
-     <!-- Portafolio -->
+    <!-- Portafolio -->
 
     <section id="Portafolio" class="my-5 p-5">
 
@@ -185,7 +195,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">POSICIONAMIENTO</h5>
                         <p class="card-text">
-                         Aplicación de css y posicionamiento de elementos - Vegeta Page
+                        Aplicación de css y posicionamiento de elementos - Vegeta Page
                         </p>
                         <a type="button" class="btn btn-outline-info" href="https://github.com/alexarayar/desafioposicionamiento" target="_blank">
                             Ver más
