--- a/index.html
+++ b/index.html
@@ -106,16 +106,7 @@
         </div>
     </section>
 
-    <section>
-        <div class="row justify-content-center">  
-            <div class="col-12 col-md-6">
-                <img src="assets/img/desafiolatam_principal-031aadc574e79866fac011f0e4dae20b0d891d220e593b203b39568a495b894c.jpeg" class="img-fluid" alt="Alex">
-                <h1 class="text-center">Actualmente estoy estudiando Desarrollo Web en Desafío Latam</h1>
-            </div>
-        </div>
-    </section>
 
-    <hr size="6px">
 
     <section id="Mis-trabajos" class="my-5 p-5">
 
@@ -221,7 +212,20 @@
 
     </section>
 
+    <hr size="6px">
 
+    <section>
+        <div class="row justify-content-center">  
+            <div class="col-12 col-md-6">
+                <div class="d-flex justify-content-center px-3">
+                <img src="assets/img/desafiolatam_principal-031aadc574e79866fac011f0e4dae20b0d891d220e593b203b39568a495b894c.jpeg" class="img-fluid" alt="imagen-desafio-latam">
+                </div>
+                <h1 class="text-center px-3 mt-2">Actualmente estoy estudiando Desarrollo Web en Desafío Latam</h1>
+            </div>
+        </div>
+    </section>
+
+    <hr size="6px">
 
     <section id="Contacto" class="container my-5">
 
